# qrcode-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: rust.yml
docs/: v2.0-roadmap.md
sql/: init.sql
sql/migrations/: 001_add_audit_logs.sql  002_add_admin_users.sql
src/: ai.rs  config.rs  csrf.rs  db.rs  helpers.rs  main.rs  middleware.rs  models.rs  rate_limit.rs  templates.rs
src/models/: domain.rs  mod.rs  request.rs
src/routes/: admin.rs  auth.rs  extract.rs  mod.rs  qrcode.rs
src/services/: ai.rs  audit.rs  extract.rs  mod.rs  qrcode.rs  user.rs
src/utils/: crypto.rs  masking.rs  mod.rs  pagination.rs  render.rs  validation.rs
static/: style.css
templates/: ai_generate.html  audit_logs.html  base.html  change_password.html  create.html  edit.html  error.html  extract.html  extract_exhausted.html  extract_result.html  list.html  login.html  logs.html  nav.html  users.html  welcome.html
