[package]
name = "qrcode-rs"
version = "1.9.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tera = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1", features = ["full"] }
bcrypt = "0.19.0"
env_logger = "0.11"
log = "0.4"
qrcode = "0.14"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
serde_json = "1"
subtle = "2"
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
rustls = "0.23"
rustls-pemfile = "2"
imageproc = "0.25"
ab_glyph = "0.2"

[dev-dependencies]
tempfile = "3"
